2012-10-12  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86/bits/byteswap.h: Include <bits/types.h>.
	(__bswap_64): __uint64_t for unsigned 64-bit int.

2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #14042]
	* sysdeps/powerpc/powerpc32/ppc-mcount.S [SHARED]: Don't use PLT
	for call to __mcount_internal.
	* sysdeps/powerpc/powerpc32/Makefile (sysdep_routines)
	(shared-only-routines) [$(subdir) = gmon]: Add compat-ppc-mcount.
	* sysdeps/powerpc/powerpc32/compat-ppc-mcount.S: New file.

2012-07-06  Peter Bergner  <bergner@vnet.ibm.com>

	* elf/rtld.c (process_envvars): Added conditional EXTRA_LD_ENVVARS_11
	macro which allows overriding of AT_PLATFORM using an environment
	variable.
	* sysdeps/unix/sysv/linux/powerpc/dl-librecon.h: New file adding
	definition for the EXTRA_LD_ENVVARS_11 macro.

2012-07-06  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* elf/dynamic-link.h (elf_get_dynamic_info): Remove assert()
	around DT_RUNPATH and DT_RPATH which prevents running a dynamic
	linker with an embedded RPATH flag, which is what a compiler
	modified to embed a non-default INTERP section would do.

2012-07-03  Andreas Jaeger  <aj@suse.de>

	* po/bg.po: Update from translation team.
	* po/cs.po: Likewise.
	* po/de.po: Likewise.
	* po/hr.po: Likewise.
	* po/nl.pl: Likewise.
	* po/pl.po: Likewise.
	* po/vi.po: Likewise.

2012-06-30  Carlos O'Donell  <carlos_odonell@mentor.com>

	* NEWS: Update copyright. Remove last-updated date.
	Mention math library bug fixes and timezone data changes.
	* README: Mention GNU/Hurd, x32, and HPPA support status.

2012-06-28  Thomas Schwinge  <thomas@codesourcery.com>

	* manual/contrib.texi (Contributors): Sort alphabetically by last name.

2012-06-27  Andreas Jaeger  <aj@suse.de>

	* manual/contrib.texi (Contributors): Add Samuel Thibault.

2012-06-25  Andreas Jaeger  <aj@suse.de>

	* sysdeps/s390/fpu/libm-test-ulps: Update.

2012-06-23  Andreas Schwab  <schwab@linux-m68k.org>
	    Thomas Schwinge  <thomas@codesourcery.com>
