@@ -1,3 +1,8 @@
+2012-11-19  Joseph Myers  <joseph@codesourcery.com>
+
+	* bits/byteswap.h: Include <bits/types.h>.
+	(__bswap_64): Use __uint64_t instead of unsigned long long int.
+
 2012-10-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* sysdeps/x86/bits/byteswap.h: Include <bits/types.h>.
